<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    tools:context=".view.MainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/labelTitle"
        style="@style/Heading_5"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/et_note"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnViewHistory"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/string_history"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/et_note"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_note"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_note"
        android:focusable="true"
        android:hint="@string/string_enter_note"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnPush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_note_btn"
        android:text="@string/string_push"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_note" />

</android.support.constraint.ConstraintLayout>